[package]
edition = "2021"
name = "hello-napi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = "2"
napi-derive = "2"

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
